--- a/src/components/Modals/Signin/Signin.scss
+++ b/src/components/Modals/Signin/Signin.scss
@@ -103,7 +103,9 @@
             display: flex;
             flex-direction: column;
             &-button{
+                
                 button{
+                    cursor: pointer;
                     font-size: 1.2rem;
                     display: flex;
                     font-weight: 700;
