--- a/src/index.scss
+++ b/src/index.scss
@@ -91,6 +91,12 @@ html,body{
   @media (max-width: 1100px) {
     font-size: 12.5px ;
   }
+  @media (max-width: 1400px){
+    font-size: 14px;
+    }
+    @media (max-width: 970px){
+      font-size: 13px;
+      }
   @media (max-width: 400px) {
     font-size: 11px ;
   }
