--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 20px;
   span{
     font-size: 1.2rem;
   }
