--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -33,6 +33,10 @@
 
     &-date{
       width: 5%;
+      h6{
+        padding-top: 5px;
+        text-align: center;
+      }
       @media(max-width: 970px) {
         width: 10%;
         
@@ -95,6 +99,10 @@
         }
       }
       &-date{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+       
         @media(min-width: 970px) {
           display: none;
         }
