--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -26,7 +26,7 @@
   // padding-bottom: 90px;
   grid-template-columns: 55% 21% 21%;
   // grid-template-rows: repeat(3,  250px);
-  column-gap: 2%;
+  column-gap: 1.5%;
  @media(max-width: 1070px){
   grid-template-columns: 65% 30%;
   // column-gap: 5%;
@@ -85,7 +85,7 @@
   }
   &-paragraph{
     img{
-      width: 98%;
+      width: 100%;
     }
     h4{
       padding-bottom: 5px;
@@ -124,6 +124,7 @@
       &-hero{
         &-container{
           display: flex;
+          justify-content: space-between;
           @media(max-width: 700px){
             flex-direction: column;
             font-size: 1.3rem;
@@ -137,12 +138,14 @@
         }
         img{
           height: 250px;
+          padding-left: 5px;
           @media(max-width: 700px){
             padding-top: 10px;
             width: 100%;
             height: auto;
+            padding-left: 0px;
           }
-          // width: 524px;
+          // width: 98%;
         }
       }
       &-content{
@@ -227,7 +230,7 @@
         // row-gap: 1%;
         // width: 100vw;
         img{
-          width: 98%;
+          width: 100%;
         }
         grid-template-columns: 20% 80%;
         @media(max-width: 700px){
