--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -3,13 +3,13 @@
 }
 .header {
   &-logo{
-    
     display: flex;
 
     align-items: center;
     // justify-content: space-between;
     // padding-rit: -5%;
     // font-size: 0.9rem;
+   
   }
   &-menu{
     &-responsive{
@@ -113,6 +113,7 @@
 
 
     &-account{
+      min-width: 5%;
      &-content{
        font-size: 0.8rem;
       padding-top: 2rem;
@@ -142,27 +143,46 @@
 
       &-username{
         // position: fixed;
+        position: absolute; 
+        width: auto;
+        text-align: right;
+        right: 5%;
+        
+        &-arrow{
+          margin-left: 3px;
+          margin-bottom: 3px;
+          border: solid black;
+          border-width: 0 3px 3px 0;
+          display: inline-block;
+          padding: 3px;
+          transform: rotate(45deg);
+          -webkit-transform: rotate(45deg);
+        }
         &-actions{
-          font-size: 1rem;
+          font-size: 0.9rem;
           color: #ccc;
           list-style: none;
+          padding-top: 5px;
           // background-color: rgba(133, 27, 27, 0.993);
-          background: linear-gradient(120deg, rgba(18, 18, 22, 0.938) 30%, rgba(83, 13, 13, 0.877) 99%);
+          
           text-align: center;
-          position: absolute;
-          width: 11.5rem;
-          z-index: 9999;
-          border-radius: 15px;
+          // position: absolute;
+          min-width: 90px;
+          z-index: 99999;
+         
+         
 
           li{
             cursor: pointer;
-            padding: 10px;
-            border-bottom: 2px solid #ccc;
+            padding: 8px;
+            background-color: rgb(92, 89, 89);
+            border-top: 2px solid #ccc;
+            z-index: 5;
             
             &:hover{
               background-color: black;
               z-index: 9999;
-              border-radius: 15px;
+              // border-radius: px;
             }
           }
         }
@@ -172,6 +192,11 @@
 
         &:hover &-actions{
           display: block;
+        }
+        &:hover &-arrow{
+          transform: rotate(-135deg);
+          -webkit-transform: rotate(-135deg);
+          margin-bottom: 0px;
         }
       }
      }
