--- a/src/components/home/footer/footer.scss
+++ b/src/components/home/footer/footer.scss
@@ -1,7 +1,7 @@
 .footer{
     width: 101%;
     margin-top: 20px;
-    padding: 20px;
+    // padding: 0px 20px;
     border-top:  2px solid black;
     padding-top: 40px;
     
