added view more

--- a/src/components/home/cards/card.scss
+++ b/src/components/home/cards/card.scss
@@ -20,6 +20,43 @@
   }
 }
 
+.content{
+  &-view{
+    &-card{
+      &-text{
+        position: absolute;
+        width: 95%;
+        text-align: center;
+        margin-top: 30px;
+        color:rgb(8, 119, 184);
+        cursor: pointer;
+      }
+      &-news{
+        padding-top: 10px;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        column-gap: 2%;
+        @media(max-width: 700px) {
+          grid-template-columns: auto auto;
+        }
+        a{
+          text-decoration: none;
+          color: inherit;
+          font-size: 1.1rem;
+          &:hover{
+            color: rgb(8, 119, 184);
+            text-decoration: underline;
+          }
+          img{
+            padding: 10px 0px;
+          }
+        }
+        
+      }
+    }
+    
+  }
+}
 .Card{
   display: grid;
   // padding-bottom: 90px;
@@ -38,7 +75,7 @@
   // column-gap: 5%;
  }
  @media(max-width: 700px){
-  grid-template-columns: 98%;
+  grid-template-columns: 100%;
   grid-template-rows: auto auto auto;
   row-gap: 0%;
   // grid-template-rows: auto auto auto;
@@ -151,7 +188,7 @@
         display: grid;
         // row-gap: 5%;
         grid-template-columns: repeat(3,1fr);
-        column-gap: 10px;
+        column-gap: 2%;
         @media(max-width: 700px){
           grid-template-columns: repeat(2,1fr);
           // row-gap: 1%;
@@ -233,10 +270,11 @@
         }
         grid-template-columns: 20% 80%;
         @media(max-width: 700px){
-          grid-template-columns: 98%;
+          grid-template-columns: 100%;
           // row-gap: 2%;
+          //  column-gap: 2%;
         }
-        column-gap: 0%;
+       
         ul{
           display: grid;
           grid-template-columns: repeat(4,1fr);
@@ -301,518 +339,3 @@
 
 
 
-
-
-
-//------------------------------------------------------------
-// .brodcaster{
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   span{
-//     margin-right: 4%;
-//     font-size: 1.2rem;
-//   }
-// }
-// .Card{
-//   // align-items: center;
-//   width: inherit;
-//   // margin-top: 40px;
-//   display: grid;
-//   grid-template-columns: 55% 21% 21%;
-  
-//   row-gap: 5%;
-//   column-gap: 30px;
-  
-//   a{
-//     text-decoration: none;
-//     color: inherit;
-//     h4,h2{
-//        &:hover{
-        
-//       color: rgb(8, 119, 184);
-//       text-decoration: underline;
-//     }
-//     }
-//     // img{
-//     //  width: 125px;
-//     // }
-   
-//   }
-//   &-heading{
-//     transition: all 0.5 ease-in !important;
-//     &-main{
-//       &-1{
-//         display: flex;
-//         img{
-//           height: 250px;
-//           width: 524px;
-//         }
-//         div{
-//           display: flex;
-//           flex-direction: column;
-//           p{
-//             padding-top: 20px;
-//             font-size: 1rem;
-//           }
-//         }
-//         &-cnn{
-//           display: flex;
-//           flex-direction: column;
-//           a{
-//             font-size: 0.9rem;
-//              padding-top: 10px;
-//              margin-right: 10px;
-//            &:first-child{
-//             padding-top: 0px;
-//            }
-//           }
-         
-//         }
-//       }
-//       &-2{
-//         img{
-//           width: 124px;
-//           // height: 150px;
-         
-          
-//         }
-//         display: grid;
-//         grid-template-columns: 48% 48%;
-//         column-gap: 4%;
-//         // display: flex;
-//         // justify-content: space-between;
-//       }
-//     }
-//     &-content{
-//       &-1{
-       
-//         display: grid;
-//         grid-template-columns: repeat(3,1fr);
-//         column-gap: 10px;
-//         // justify-content: space-between;
-//       }
-//       &-2{
-//         display: grid;
-//         grid-template-columns: repeat(2,1fr);
-//         column-gap: 2%;
-//         // width: 100%;
-//         ul{
-         
-//           list-style: none;
-//           width: 19vw;
-//           li{
-//             img{
-//               width: 90px;
-//               // height: 60px;
-//               @media (max-width: 1400px){
-//                 height: 60px;
-//                 }
-//             }
-//             color: black;
-//             font-size: 0.9rem;
-//            margin: 10px 0px;
-//            &:first-child{
-//             margin: 0px 0px;
-//            }
-//             cursor: pointer;
-
-//             a{
-//               font-weight: 600;
-//               display: flex;
-//               text-decoration: none;
-//               color: inherit;
-//               span{
-//                 padding-left: 5px;
-//               }
-//               &:hover{
-//                 color: rgb(8, 119, 184);
-//                 text-decoration: underline;
-//               }
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-//   &-small-card{
-//     // width: 17vw;
-//     &-cnn{
-//       font-size: 0.9rem;
-//       a{
-//         h4{
-//           padding-top: 10px;
-//         }
-        
-//       }
-//     }
-//     img{
-//       width: 98%;
-//     }
-//     h4{
-//       font-size: 0.9rem;
-//     }
-//     p{
-//       font-size: 0.9rem;
-//       padding-top: 5px;
-//     }
-//   }
-  
-// }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-//---------------------------- old Style -------------------------------------------------------------
-// .bbc-card {
-//   // margin: 15px 20px;
-//   #logo {
-//     padding: 10px;
-//     width: 150px;
-//     border-left: 4px solid rgb(182, 29, 29);
-//   }
-//   &-ul {
-//     // padding: 10px;
-//     display: grid;
-//     grid-column-gap: 15px;
-//     grid-row-gap: 10px;
-//     @media (min-width: 768px) {
-//       grid-template-columns: repeat(4, 1fr);
-//     }
-    
-//     li {
-//       width: 100%;
-//       color: white;
-
-//       a {
-//         color: white;
-//         text-decoration: none;
-//         transition: all 0.5s;
-//         &:hover {
-//           img {
-//             filter: brightness(95%);
-//           }
-//         }
-//       }
-
-//       list-style: none;
-//       span {
-//         font-size: 1.4rem;
-//         padding: 10px 10px;
-//       }
-//       p {
-//         padding: 10px 5px 20px 10px;
-//         color: rgba(255, 255, 255, 0.8);
-//       }
-//     }
-
-//     &-li {
-//       &-images {
-//         // min-height: 18vh; //change when responsive
-//         // height: 100%;
-//         &--text {
-//           overflow: hidden;
-//           background: linear-gradient(
-//             to bottom,
-//             rgba(255, 0, 0, 0) 0%,
-//             rgba(22, 21, 21, 0.815) 100%
-//           );
-//           position: absolute;
-//           z-index: 2;
-//           font-size: 1.2rem;
-//           height: 100%;
-          
-//           display: flex;
-//           flex-direction: column;
-//           justify-content: flex-end;
-//           width: 100%;
-//         }
-//         position: relative;
-//         &--img {
-//           z-index: 4;
-//           display: block;
-//           width: 100%;
-//           filter: brightness(80%);
-//           transition: all 0.5s;
-//           &:hover {
-//             filter: brightness(100%);
-//           }
-          
-//         }
-//       }
-//       &-0 {
-//         @media (min-width: 768px) {
-//         grid-column-start: 1;
-//         grid-column-end: 3;
-//         grid-row-start: 1;
-//         grid-row-end: 3;
-//         }
-        
-//         span {
-//           font-size: 2rem !important;
-//           @media (max-width: 300px) {
-//             padding: 5px 0px;
-//           }
-          
-//           @media (min-width: 300px) {
-//             padding-top: 5px;
-//             font-size: 1.3rem !important;
-//           }
-          
-//         }
-//       }
-//     }
-//   }
-
-//   // Second Heading bbc
-
-//   &-ul-secondheading {
-//     // position: relative;
-//     padding-top: 15px;
-//     display: grid;
-//     grid-column-gap: 15px;
-//     grid-row-gap: 10px;
-//     // padding: 10px;
-//     grid-template-columns: auto auto auto;
-//     @media (max-width: 850px) {
-//       grid-template-columns: auto auto;
-//     }
-//     @media (max-width: 605px) {
-//       grid-template-columns: auto;
-//     }
-//     li {
-//       // min-height: 25vh;
-//       list-style: none;
-//       width: 100%;
-//       position: relative;
-
-//       a {
-//         text-decoration: none;
-//         color: white;
-//         &:hover {
-//           img {
-//             filter: brightness(100%);
-//           }
-//         }
-//       }
-//     }
-
-//     img {
-//       width: 100%;
-//       height: auto;
-//       position: relative;
-//       filter: brightness(80%);
-//       transition: all 0.5s;
-//       &:hover {
-//         filter: brightness(90%);
-//       }
-//     }
-//     span {
-//       font-size: 1.5rem;
-//       padding: 0px 5px;
-//     }
-//     &-item {
-//       overflow: hidden;
-//       background: linear-gradient(
-//         to bottom,
-//         rgba(255, 0, 0, 0) 0%,
-//         rgba(22, 21, 21, 0.801) 100%
-//       );
-//       height: 99%;
-//       // max-height: 351px;
-      
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: flex-end;
-//       position: absolute;
-//       z-index: 2;
-//       font-size: 1.2rem;
-//       padding-left: 5px;
-//       width: 100%;
-//       p {
-//         font-size: 1.1rem;
-//         padding: 10px 5px;
-//         color: rgba(255, 255, 255, 0.8);
-//       }
-//     }
-//   }
-// }
-
-// // The Wall Street Jurnal Card
-// .wsj {
-//   // margin: 20px;
-//   // background-color: rgba(185, 184, 184, 0.377);
-//   // box-shadow: 3px 5px 7px 7px rgba(5, 5, 5, 0.308);
-//   img {
-//     padding: 15px;
-//     border-left: 4px solid black;
-//     max-width: 100%;
-//   }
-
-//   &--ul {
-//     display: flex;
-//     // flex-direction: row;
-//     @media (max-width: 700px) {
-//       flex-direction: column;
-//     }
-    
-//     &--left {
-//       width: 100%;
-//       @media (min-width: 700px) {
-//         border-right: 1px solid rgb(158, 157, 157);
-//         padding-right: 10px;
-//         padding-left: 10px;
-//       }
-      
-//     }
-//     &--center {
-//       @media (min-width: 700px) {
-//       width: 110%;
-//       }
-//       h3 {
-//         font-size: 1.7rem !important;
-//       }
-
-//       span {
-//         font-size: 1.2rem !important;
-//       }
-//     }
-//     &--right {
-//       width: 100%;
-//       @media (min-width: 700px) {
-//       border-left: 1px solid rgb(158, 157, 157);
-//       padding-left: 10px;
-//       }
-//     }
-//   }
-
-//   h3 {
-//     padding-bottom: 10px;
-//     font-size: 1.5rem;
-//     padding-top: 10px;
-//   }
-//   span {
-//     display: block;
-//     width: 100%;
-//     font-size: 1.1rem;
-//     color: rgb(43, 42, 42);
-//   }
-//   a {
-//     text-decoration: none;
-//     color: inherit;
-//     cursor: pointer;
-//     transition: all 0.2s;
-//     &:hover {
-//       color: rgba(51, 93, 155, 0.89);
-//     }
-//   }
-//   span:after {
-//     display: flex;
-//     content: "";
-//     border-bottom: 1px solid rgb(158, 157, 157);
-//     margin-top: 10px;
-//     margin-left: 10px;
-//     margin-right: 20px;
-//   }
-//   ul {
-//     margin: 10px;
-//   }
-//   li {
-//     list-style: none;
-//   }
-// }
-
-// .times-of-india {
-//   margin: 20px;
-//   padding-bottom: 5px;
-//   // box-shadow: 3px 5px 7px 7px rgba(5, 5, 5, 0.562);
-//   // background-color: rgba(63, 62, 62, 0.377);
-//   img {
-//     display: block;
-
-//     width: 150px;
-//     padding-left: 10px;
-//     border-left: 4px solid rgb(161, 24, 24);
-//   }
-//   .toi {
-//     position: relative;
-//     margin: 10px;
-//     display: flex;
-//     @media (max-width: 700px) {
-//       flex-direction: column;
-//     }
-//     justify-content: space-between;
-//     &-latest {
-
-//       @media (max-width: 700px) {
-//         margin-top: 10px;
-//         text-align: center;
-//         width: 100%;
-//       }
-//       @media (min-width: 700px) {
-//         width: 70%;
-//         grid-template-columns: 1fr 1fr;
-//         justify-content: space-between;
-//       }
-      
-//       display: grid;
-//       padding-top: 10px;
-    
-      
-//       background-color: rgba(0, 0, 0, 0.788);
-//       color: white;
-//       border-radius: 30px;
-//     }
-//     &-top {
-//       @media (max-width: 700px) {
-//         margin-top: 10px;
-//         text-align: center;
-//         width: 100%;
-//         padding-bottom: 10px;
-//       }
-//       padding-top: 10px;
-//       @media (min-width: 700px) {
-//         width: 30%;
-//       }
-     
-//       margin-right: 2%;
-//       background-color: rgba(0, 0, 0, 0.788);
-//       color: white;
-//       border-radius: 30px;
-//     }
-
-//     a {
-//       text-decoration: none;
-//       color: inherit;
-//       cursor: pointer;
-//       transition: all 0.5s;
-//       &:hover {
-//         color: rgb(62, 114, 224);
-//       }
-//     }
-//     ul {
-//       list-style: none;
-
-//       li {
-//         padding: 10px;
-//       }
-//     }
-//   }
-// }
