--- a/src/components/home/footer/footer.scss
+++ b/src/components/home/footer/footer.scss
@@ -9,6 +9,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media(max-width: 800px) {
+        justify-content: space-around;
+    }
+    
     h4{
         padding-bottom: 20px;
     }
@@ -69,9 +73,27 @@
         }
     }
     &-contact{
+        @media(max-width: 800px) {
+            flex: 0 0 100%;
+            text-align: center;
+            padding-bottom: 20px;
+            padding-top: 10px;
+        }
         ul{
+            @media(max-width: 800px){
+                display: flex;
+                // align-items: center;
+                justify-content: center;
+                // width: 50%;
+            }
             list-style: none;
             li{
+                @media(max-width: 800px){
+                    &:not(:first-child){
+                        padding-left: 15px;
+                    }
+                 
+                }
                 padding-bottom: 10px;
                 img{
                     width: 30px;
